--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.345.0",
+    "@aws-sdk/s3-request-presigner": "^3.345.0",
     "connect-mongo": "^3.2.0",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
     "express-session": "^1.17.1",
+    "moment": "^2.29.4",
     "mongoose": "^7.2.0",
     "passport": "^0.6.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "uuid": "^9.0.0"
   }
 }
